[tool.poetry]
name = "yellowbox"
version = "0.6.8"
description = ""
authors = ["biocatch ltd"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/biocatchltd/yellowbox"

[tool.poetry.dependencies]
python = "^3.7"
docker = "^4.2.0 || ^5.0.0"
yaspin = "^1.0.0"
requests = "*"

redis = { version = ">=3.3.0", optional = true }
pika = { version = "*", optional = true }
kafka-python = { version = "*", optional = true }

# 12.7.0/1 is yanked because it is broken for azurite.
# github issue: https://github.com/Azure/azure-sdk-for-python/issues/16193
azure-storage-blob = { version = "^12.0.0, < 12.7.0", optional = true }

cffi = { version = "^1.14.0", optional = true }
sqlalchemy = { version = "^1.3.0", optional = true }
psycopg2 = { version = "^2.8.6", optional = true }
simple_websocket_server = { version = "*", optional = true }
python-igraph = { version = "^0.9.6, != 0.9.8", optional = true }
starlette = { version = "*", optional = true }
uvicorn = { version = "*", optional = true }
websockets = { version = "*", optional = true }
hvac = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
httpx = "^0.20.0"
pytest-cov = "^2.10"
requests = "^2"
flake8 = "*"
websocket_client = "*"
isort = "^5.9.1"
mypy = "^0.902"
types-requests = "^2.25.0"
types-redis = "^3.5.4"
pytest-xdist = "^2.1.0"
sphinx = "*"
sphinx-rtd-theme = "*"

[tool.poetry.extras]
azure = ["azure-storage-blob", "cffi"]
kafka = ["kafka-python"]
postgresql = ["sqlalchemy", "psycopg2"]
rabbit = ["pika"]
redis = ["redis"]
vault = ["hvac"]
webserver = ["starlette", "python-igraph", "uvicorn", "websockets"]
websocket = ["simple_websocket_server", "websocket_client"]

dev = ["redis", "pika", "kafka-python", "azure-storage-blob", "cffi", "sqlalchemy", "psycopg2",
    "simple_websocket_server", "websocket_client", "starlette", "python-igraph", "uvicorn", "websockets", "hvac"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
