[tool.poetry]
name = "yellowbox"
version = "0.7.6"
description = ""
authors = ["biocatch ltd"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/biocatchltd/yellowbox"

[tool.poetry.dependencies]
python = "^3.7"
docker = ">=4.2.0"
yaspin = ">=1.0.0"
requests = "*"

redis = { version = ">=3.3.0", optional = true }
pika = { version = "*", optional = true }
kafka-python = { version = "*", optional = true }

azure-storage-blob = { version = "(>=12.0.0, < 12.7.0) || >=12.11.0", optional = true }

cffi = { version = ">=1.14.0", optional = true }
sqlalchemy = { version = ">=1.3.0", optional = true }
psycopg2 = { version = ">=2.8.6", optional = true }
simple_websocket_server = { version = "*", optional = true }
starlette = { version = ">=0.9.0", optional = true }
uvicorn = { version = ">=0.13.0", optional = true }
websockets = { version = "*", optional = true }
hvac = { version = "*", optional = true }
pyodbc = { version = ">=4.0.32", optional = true }
Deprecated = ">=1.2.13"
SQLAlchemy-Utils = { version = ">=0.38.2", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
httpx = "^0.20.0"
pytest-cov = "^2.10"
requests = "^2"
flake8 = "^4.0.0"
websocket_client = "*"
isort = "^5.9.1"
mypy = "^0.950"
types-requests = "^2.25.0"
types-redis = "^3.5.4"
pytest-xdist = "^2.1.0"
sphinx = "*"
sphinx-rtd-theme = "*"
pytest-asyncio = "^0.18.2"
coverage = "^6.3.2"
types-Deprecated = "^1.2.7"
google-cloud-storage = "^2.5.0"
gcloud-aio-storage = "^7.0.1"

[tool.poetry.extras]
azure = ["azure-storage-blob", "cffi"]
kafka = ["kafka-python"]
postgresql = ["sqlalchemy", "psycopg2", "SQLAlchemy-Utils"]
mssql = ['sqlalchemy', "SQLAlchemy-Utils"]
rabbit = ["pika"]
redis = ["redis"]
vault = ["hvac"]
webserver = ["starlette", "uvicorn", "websockets"]
websocket = ["simple_websocket_server", "websocket_client"]
gcs = []  # empty for now, but we want to maintain forwards compatiblity in case we even want to add extras here

dev = ["redis", "pika", "kafka-python", "azure-storage-blob", "cffi", "sqlalchemy", "psycopg2",
    "simple_websocket_server", "websocket_client", "starlette", "python-igraph", "uvicorn", "websockets", "hvac",
    'pyodbc', 'SQLAlchemy-Utils']

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pytest11]
yellowbox = "yellowbox._pytest"